--- a/placePage.html
+++ b/placePage.html
@@ -8,6 +8,8 @@
 		<script src="//www.parsecdn.com/js/parse-1.5.0.js"></script>
 		<script src="http://underscorejs.org/underscore.js"></script>
 		<script src="includes/main.js"></script>
+		<link rel="stylesheet" href="jq/ui/jquery-ui.css">
+		<link rel="stylesheet" href="jq/ui/jquery-ui.css">
 		<link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="includes/style.css">
 		<link rel="stylesheet" href="includes/navBar.css">
@@ -85,8 +87,9 @@
 					    <input type="radio" id="star2" name="rating" value="2" onclick="rate()"/><label for="star2" title="Kinda bad">2 stars</label>
 					    <input type="radio" id="star1" name="rating" value="1" onclick="rate()"/><label for="star1" title="Sucks big time">1 star</label>
 					</fieldset>
-					<div id="allrating"></div>
 					<div id="currentRating">דירוג נוכחי:</div>
+					<div id="allrating"></div>
+
 				</div>
 			
 
