--- a/placePage.html
+++ b/placePage.html
@@ -8,7 +8,7 @@
 		<script src="//www.parsecdn.com/js/parse-1.5.0.js"></script>
 		<script src="http://underscorejs.org/underscore.js"></script>
 		<script src="includes/main.js"></script>
-		<link rel="stylesheet" href="jq/ui/jquery-ui.css">
+        <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="jq/ui/jquery-ui.css">
 		<link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="includes/style.css">
