--- a/main.html
+++ b/main.html
@@ -86,7 +86,7 @@
 					<h3>המבוקש</h3>
 					<h3 id="placeName"></h3>
 					<h4 id="placePageType"></h4>
-					<div id="placePagePic" class="crop" style="margin-right: 13px; margin-top: 5px; height: 211px; margin-bottom: 10px; width: 219px; overflow: hidden;"></div>
+					<div id="placePagePic" class="crop" ></div>
 					<p id="asideDescription"></p>
 					<div class= "asideRating">
 	                    <fieldset id="rating" >
