--- a/placePage.html
+++ b/placePage.html
@@ -64,7 +64,7 @@
 					<form method="post" id="add-image">
 						<div><input id="upload" class="fileUpload" type="file" name="image" required> 
 							<div id="fileDisplayArea2"></div></div>
-						<div><input type="submit" name="btn" class="myLabel" value="+הוסף"></div>
+						<div><input type="submit" name="btn" class="myLabel" value="+הוסף" style="display:none"></div>
 					</form>
 					<div class= "tagsLocation">
 						<select class="filterTags" id="chooseTag" onchange="addTag(this)"></select>
