--- a/main.html
+++ b/main.html
@@ -86,7 +86,7 @@
 					<h3>המבוקש</h3>
 					<h3 id="placeName"></h3>
 					<h4 id="placePageType"></h4>
-					<div id="placePagePic" class="crop" ></div>
+					<div id="placePagePicAside" class="crop" ></div>
 					<p id="asideDescription"></p>
 					<div class= "asideRating">
 	                    <fieldset id="rating" >
