--- a/placePage.html
+++ b/placePage.html
@@ -18,14 +18,21 @@
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	</head>
 	<body>	 
+        </script>
+		<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4&appId=405245006352397";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+		</script>
 		<script type="text/html" id='myProfile'>
 			<div class="placeprivate">
                	<h1 class="myName"><%= item.get("displayName") %> </h1>
 				<img src='http://graph.facebook.com/<%= item.get("facebookId")%>/picture?type=normal'/>   
 			</div>
-        </script>
-
-
 		<script type='text/html' id='placePageId'> </script>
 
 		<div id="wrapper">
