--- a/main.html
+++ b/main.html
@@ -60,7 +60,7 @@
 			<header> 
 				<a id="logo" href="main.html"> </a>
 				<div id="helloUser"></div>
- 			</header>		
+ 		</header>		<div class= "menuHamburger"></div>
 		 		<nav id="cssmenu">
 					<button class="logout2" onclick="logout();"></button>
 					<ul>
