--- a/main.html
+++ b/main.html
@@ -60,7 +60,8 @@
 			<header> 
 				<a id="logo" href="main.html"> </a>
 				<div id="helloUser"></div>
- 		</header>		<div class= "menuHamburger"></div>
+ 		</header>
+				<input type="checkbox" class="menuHamburger"><span></span>
 		 		<nav id="cssmenu">
 					<button class="logout2" onclick="logout();"></button>
 					<ul>
@@ -72,6 +73,7 @@
 					</ul>
 			 		<span></span>
 		 		</nav>
+
 			 <main>
 			 	<div class="filterBox">
 				 	<div id="filterTarget"></div>
