--- a/aboutus.html
+++ b/aboutus.html
@@ -26,19 +26,20 @@
 		<div id="wrapper"> 
 			<header> 
 				<a id="logo" href="main.html"> </a>
-				<div id="helloUser"></div>
- 			</header>		
-		 		<nav id="cssmenu">
-					<button class="logout" onclick="logout();"></button>
-					<ul>
-					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
-					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
-					   <li><a href='scoreBoard.html'><span>לוח ניקוד</span></a></li>
-					   <li><a href='myPage.html'><span>העמוד שלי</span></a></li>
-					   <li class="last active"><span></span><a href='#'><span>קצת עלינו</span></a></li>
-					</ul>
-			 		<span></span>
-		 		</nav>
+	 		</header>
+	 		<div id="helloUser"></div>
+			<input type="checkbox" class="menuHamburger"><span></span>
+	 		<nav id="cssmenu">
+				<button class="logout2" onclick="logout();"></button>
+				<ul>
+				   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
+				   <li><a href='add.html'><span>הוסף מקום</span></a></li>
+				   <li><a href='scoreBoard.html'><span>לוח ניקוד</span></a></li>
+				   <li><a href='myPage.html'><span>העמוד שלי</span></a></li>
+				   <li class='active'><span></span><a href='aboutus.html'><span>קצת עלינו</span></a></li>
+				</ul>
+		 		<span></span>
+	 		</nav>
 			 <main>
 			 	<h1 class="pageName">קצת עלינו..</h1>
 			 	<p class="aboutus">היי לכולם,<br>
