--- a/add.html
+++ b/add.html
@@ -53,10 +53,11 @@
 		<div id="wrapper">
 			<header> 
 				<a id="logo" href="main.html"> </a>
-				<div id="helloUser"></div>
- 			</header>		
+	 		</header>
+	 		<div id="helloUser"></div>
+				<input type="checkbox" class="menuHamburger"><span></span>
 		 		<nav id="cssmenu">
-					<button class="logout" onclick="logout();"></button>
+					<button class="logout2" onclick="logout();"></button>
 					<ul>
 					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
 					   <li class='active'><a href='add.html'><span>הוסף מקום</span></a></li>
