--- a/myPage.html
+++ b/myPage.html
@@ -40,20 +40,22 @@
 		<div id="wrapper"> 
 			<header> 
 				<a id="logo" href="main.html"> </a>
-				<div id="helloUser"></div>
- 			</header>		
-		 		<nav id="cssmenu">
-					<button class="logout" onclick="logout();"></button>
-					<ul>
-					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
-					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
-					   <li><a href='scoreBoard.html'><span>לוח ניקוד</span></a></li>
-					   <li class='active'><a href='#'><span>העמוד שלי</span></a></li>
-					   <li class="last"><span></span><a href='aboutus.html'><span>קצת עלינו</span></a></li>
-					</ul>
-			 		<span></span>
-		 		</nav>
-			 <main>
+	 		</header>
+	 		<div id="helloUser"></div>
+			<input type="checkbox" class="menuHamburger"><span></span>
+	 		<nav id="cssmenu">
+				<button class="logout2" onclick="logout();"></button>
+				<ul>
+				   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
+				   <li><a href='add.html'><span>הוסף מקום</span></a></li>
+				   <li><a href='scoreBoard.html'><span>לוח ניקוד</span></a></li>
+				   <li class='active'><a href='myPage.html'><span>העמוד שלי</span></a></li>
+				   <li class='last'><span></span><a href='aboutus.html'><span>קצת עלינו</span></a></li>
+				</ul>
+		 		<span></span>
+	 		</nav>
+	 		<main>
+				<h1 class="pageName">העמוד שלי</h1>
 			 	<div class= "profile" >
 				 	<div id="myPageTarget"></div>
 	                <h2 class="myScoreH">הניקוד שלי:</h2>
@@ -62,6 +64,7 @@
 	                <h3 id="myStatus"></h3>
                 </div>
                 
+
 				<div id= "myPage">
 					<h2>מקומות אחרונים:</h2>
 					<div id="checkins" style="color:white"></div>
