--- a/scoreBoard.html
+++ b/scoreBoard.html
@@ -25,19 +25,20 @@
 		<div id="wrapper"> 
 			<header> 
 				<a id="logo" href="main.html"> </a>
-				<div id="helloUser"></div>
  			</header>		
-		 		<nav id="cssmenu">
-		 			<button class="logout" onclick="logout();"></button>
-					<ul>
-					   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
-					   <li><a href='add.html'><span>הוסף מקום</span></a></li>
-					   <li class= "active"><a href='#'><span>לוח ניקוד</span></a></li>
-					   <li><a href='myPage.html'><span>העמוד שלי</span></a></li>
-					   <li class="last"><span></span><a href='aboutus.html'><span>קצת עלינו</span></a></li>
-					</ul>
-			 		<span></span>
-		 		</nav>
+ 			<div id="helloUser"></div>
+ 			<input type="checkbox" class="menuHamburger"><span></span>
+	 		<nav id="cssmenu">
+	 			<button class="logout" onclick="logout();"></button>
+				<ul>
+				   <li><a href='main.html'><span>קרובים קרובים</span></a></li>
+				   <li><a href='add.html'><span>הוסף מקום</span></a></li>
+				   <li class= "active"><a href='#'><span>לוח ניקוד</span></a></li>
+				   <li><a href='myPage.html'><span>העמוד שלי</span></a></li>
+				   <li class="last"><span></span><a href='aboutus.html'><span>קצת עלינו</span></a></li>
+				</ul>
+		 		<span></span>
+	 		</nav>
 			 <main>
 			 	<h1 class ="Top5">החמישייה הפותחת</h1>
                 <div id   ="scores"></div>
