--- a/placePage.html
+++ b/placePage.html
@@ -4,6 +4,7 @@
 	 	<title>FuNights</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<script src="includes/top.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
 		<script src="jq/ui/jquery-ui.js"></script>
 		<script src="//www.parsecdn.com/js/parse-1.5.0.js"></script>
