--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>FuNights Login</title>
 	<meta charset="UTF-8">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script src="includes/main.js"></script>
+	<script src="includes/top.js"></script>
 	<script src="//www.parsecdn.com/js/parse-1.5.0.js"></script>
     <link rel="stylesheet" href="includes/style.css">
     <link rel="stylesheet" href="includes/navBar.css">
@@ -105,7 +105,7 @@ $(document).on(
   the JavaScript SDK to present a graphical Login button that triggers
   the FB.login() function when clicked.
 -->
-
+	<script src="includes/main.js"></script>
 <!--<button id="fblogin">facebook</button>-->
 	<div class="connectIndex">
 		<img class="connectIndexImage" src="images/funights.png"/>
