--- a/main.html
+++ b/main.html
@@ -4,38 +4,7 @@
 	 	<title>FuNights</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<script>
-			function getLocation(){
-			    if (navigator.geolocation) {
-			        navigator.geolocation.getCurrentPosition(savePosition, showError);
-			        return savePosition;
-			        
-			    } else {
-			        // TODO:
-			   }
-			}
-			  var  savedPosition = getLocation();
-	Number.prototype.toRad = function() { return this * (Math.PI / 180); };
-	function calcDistance(lat2, lon2){
-	    if (!savedPosition){
-	        return 0;
-	    }
-	    var lat1 = savedPosition.coords.latitude;
-	    var lon1 = savedPosition.coords.longitude;
-	    var R = 6371; // km
-	    var dLat = (lat2-lat1).toRad();
-	    var dLon = (lon2-lon1).toRad();
-	    var lat1 = lat1.toRad();
-	    var lat2 = lat2.toRad();
-	
-	    var a = Math.sin(dLat/2) * Math.sin(dLat/2) +
-	            Math.sin(dLon/2) * Math.sin(dLon/2) * Math.cos(lat1) * Math.cos(lat2);
-	    var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
-	    var d = R * c;
-	    return d;
-	}
-
-		</script>
+		<script src="includes/top.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
 		<script src="//www.parsecdn.com/js/parse-1.5.0.js" defer></script>
 		<script src="http://underscorejs.org/underscore.js" defer></script>
