--- a/main.html
+++ b/main.html
@@ -3,6 +3,16 @@
 	<head>
 	 	<title>FuNights</title>
 		<meta charset="UTF-8">
+		<script>function getLocation(){
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(savePosition, showError);
+      	return savePosition;
+
+    } else {
+        // TODO:
+   }
+}
+</script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="includes/top.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
