--- a/main.html
+++ b/main.html
@@ -3,43 +3,15 @@
 	<head>
 	 	<title>FuNights</title>
 		<meta charset="UTF-8">
-		<script>function getLocation(){
-			    if (navigator.geolocation) {
-			        navigator.geolocation.getCurrentPosition(savePosition, showError);
-			      	return savePosition;
-			
-			    } else {
-			        // TODO:
-			   }
-			}
-			
-		var  savedPosition = getLocation();
-		Number.prototype.toRad = function() { return this * (Math.PI / 180); };
-		function calcDistance(lat2, lon2){
-		    if (!savedPosition){
-		        return 0;
-		    }
-		    var lat1 = savedPosition.coords.latitude;
-		    var lon1 = savedPosition.coords.longitude;
-		    var R = 6371; // km
-		    var dLat = (lat2-lat1).toRad();
-		    var dLon = (lon2-lon1).toRad();
-		    var lat1 = lat1.toRad();
-		    var lat2 = lat2.toRad();
-		
-		    var a = Math.sin(dLat/2) * Math.sin(dLat/2) +
-		            Math.sin(dLon/2) * Math.sin(dLon/2) * Math.cos(lat1) * Math.cos(lat2);
-		    var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
-		    var d = R * c;
-		    return d;
-		}
+
        
-		</script>
+	
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="includes/top.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
 		<script src="//www.parsecdn.com/js/parse-1.5.0.js" defer></script>
 		<script src="http://underscorejs.org/underscore.js" defer></script>
+		<script src="includes/main.js" async></script>
         <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="includes/style.css">
 		<link rel="stylesheet" href="includes/navBar.css">
@@ -139,10 +111,9 @@
 				<div id="target" class="crop"></div>
 			 </main>
 		</div>
-		<script src="includes/main.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?signed_in=true&libraries=places&callback=initAutocomplete" async defer></script>
- 		
+		
+        <script src="https://maps.googleapis.com/maps/api/js?signed_in=true&libraries=places&callback=initAutocomplete"></script>
         <script src="includes/changePosition.js"></script>
-        <script src="includes/parse_main.js"></script>
+        <script src="includes/parse_main.js" defer></script>
 	</body>
 </html>
