--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
 		<script src="//www.parsecdn.com/js/parse-1.5.0.js" defer></script>
 		<script src="http://underscorejs.org/underscore.js" defer></script>
-		<script src="includes/main.js" async></script>
+		<script src="includes/main.js"></script>
         <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="includes/style.css">
 		<link rel="stylesheet" href="includes/navBar.css">
