--- a/main.html
+++ b/main.html
@@ -5,14 +5,13 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
-		<script src="//www.parsecdn.com/js/parse-1.5.0.js" defer></script>
-		<script src="http://underscorejs.org/underscore.js" defer></script>
-		<script src="https://maps.googleapis.com/maps/api/js?signed_in=true&libraries=places&callback=initAutocomplete"></script>
-		<script src="includes/main.js"></script>
+		<script src="//www.parsecdn.com/js/parse-1.5.0.js"></script>
+		<script src="http://underscorejs.org/underscore.js"></script>
+		<script src="jq/ui/jquery-ui.js"></script>
         <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="includes/style.css">
 		<link rel="stylesheet" href="includes/navBar.css">
-		<link rel="stylesheet" href="includes/funights.css">
+		<link rel="stylesheet" href="jq/ui/jquery-ui.css">
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	</head>
@@ -108,9 +107,10 @@
 				<div id="target" class="crop"></div>
 			 </main>
 		</div>
-		
-        
-        <script src="includes/changePosition.js"></script>
-        <script src="includes/parse_main.js"></script>
+		<script src="includes/parse_main.js"></script>
+		<script src="includes/main.js"></script>
+		<script src="includes/changePosition.js"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?signed_in=true&libraries=places&callback=initAutocomplete" async defer></script>
+
 	</body>
 </html>
