--- a/aboutus.html
+++ b/aboutus.html
@@ -58,7 +58,8 @@
 			 		<br>
 			 		מיכל וליטל
 			 	</p>
-			 	<img class="kissImage" src= "images/kiss1.gif">
+			 	
+			 	<div class="kissWrap"><img class="kissImage" src= "images/kiss1.gif"></div>
 
 			 </main>
 		</div>
