--- a/aboutus.html
+++ b/aboutus.html
@@ -58,8 +58,7 @@
 			 		<br>
 			 		מיכל וליטל
 			 	</p>
-			 	
-			 	<div class="kissWrap"><img class="kissImage" src= "images/kiss1.gif"></div>
+			 	<img class="kissImage" src= "images/kiss1.gif">
 
 			 </main>
 		</div>
